--- a/gax-java/dependencies.properties
+++ b/gax-java/dependencies.properties
@@ -35,7 +35,7 @@ version.io_grpc=1.37.0
 maven.com_google_api_grpc_proto_google_common_protos=com.google.api.grpc:proto-google-common-protos:2.0.1
 maven.com_google_api_grpc_grpc_google_common_protos=com.google.api.grpc:grpc-google-common-protos:2.0.1
 maven.com_google_auth_google_auth_library_oauth2_http=com.google.auth:google-auth-library-oauth2-http:0.24.0
-maven.com_google_auth_google_auth_library_credentials=com.google.auth:google-auth-library-credentials:0.24.0
+maven.com_google_auth_google_auth_library_credentials=com.google.auth:google-auth-library-credentials:1.0.0
 maven.io_opencensus_opencensus_api=io.opencensus:opencensus-api:0.28.0
 maven.io_opencensus_opencensus_contrib_grpc_metrics=io.opencensus:opencensus-contrib-grpc-metrics:0.28.0
 maven.io_opencensus_opencensus_contrib_http_util=io.opencensus:opencensus-contrib-http-util:0.28.0
@@ -53,7 +53,7 @@ maven.io_netty_netty_handler_proxy=io.netty:netty-handler-proxy:4.1.52.Final
 maven.io_perfmark_perfmark_api=io.perfmark:perfmark-api:0.23.0
 maven.org_apache_tomcat_annotations_api=org.apache.tomcat:annotations-api:6.0.53
 maven.com_google_code_gson_gson=com.google.code.gson:gson:2.8.6
-maven.com_google_guava_guava=com.google.guava:guava:30.1-android
+maven.com_google_guava_guava=com.google.guava:guava:30.1.1-jre
 maven.com_google_guava_failureaccess=com.google.guava:failureaccess:1.0.1
 maven.org_apache_commons_commons_lang3=org.apache.commons:commons-lang3:3.8.1
 maven.com_google_android_annotations=com.google.android:annotations:4.1.1.4
@@ -62,7 +62,7 @@ maven.com_google_errorprone_error_prone_annotations=com.google.errorprone:error_
 maven.com_google_j2objc_j2objc_annotations=com.google.j2objc:j2objc-annotations:1.3
 maven.com_google_auto_value_auto_value=com.google.auto.value:auto-value:1.4
 maven.com_google_auto_value_auto_value_annotations=com.google.auto.value:auto-value-annotations:1.7.4
-maven.com_google_api_api_common=com.google.api:api-common:1.10.1
+maven.com_google_api_api_common=com.google.api:api-common:2.0.0
 maven.org_threeten_threetenbp=org.threeten:threetenbp:1.5.0
 maven.com_google_api_grpc_grpc_google_iam_v1=com.google.api.grpc:grpc-google-iam-v1:1.0.9
 maven.com_google_api_grpc_proto_google_iam_v1=com.google.api.grpc:proto-google-iam-v1:1.0.9
