--- a/gax-java/.github/release-please.yml
+++ b/gax-java/.github/release-please.yml
@@ -1,5 +1,6 @@
 releaseType: java-yoshi
 bumpMinorPreMajor: true
+handleGHRelease: true
 branches:
   - releaseType: java-lts
     bumpMinorPreMajor: true
