--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/resourcename/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/resourcename/BUILD.bazel
@@ -23,6 +23,7 @@ TEST_DEPS = [
     "//src/main/java/com/google/api/generator/gapic/composer/resourcename",
     "//src/main/java/com/google/api/generator/gapic/model",
     "//src/main/java/com/google/api/generator/gapic/protoparser",
+    "//src/test/java/com/google/api/generator/gapic/composer/common",
     "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
     "//src/test/java/com/google/api/generator/test/framework:asserts",
     "//src/test/java/com/google/api/generator/test/framework:utils",
