--- a/gax-java/gax-httpjson/BUILD.bazel
+++ b/gax-java/gax-httpjson/BUILD.bazel
@@ -20,6 +20,7 @@ _COMPILE_DEPS = [
     "@com_google_auto_value_auto_value_annotations//jar",
     "@javax_annotation_javax_annotation_api//jar",
     "@com_google_http_client_google_http_client_gson//jar",
+    "@com_google_api_grpc_proto_google_common_protos//jar",
     "@com_google_protobuf//:protobuf_java",
     "@com_google_protobuf_java_util//jar",
     "//gax:gax",
