--- a/gax-java/gax-httpjson/build.gradle
+++ b/gax-java/gax-httpjson/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     libraries['maven.com_google_http_client_google_http_client_gson'],
     libraries['maven.com_google_auth_google_auth_library_oauth2_http'],
     libraries['maven.com_google_auth_google_auth_library_credentials'],
+    libraries['maven.com_google_api_grpc_proto_google_common_protos']
     libraries['maven.com_google_api_api_common']
 
   compileOnly libraries['maven.com_google_auto_value_auto_value']
