--- a/src/main/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -30,6 +30,7 @@ java_library(
         "@com_google_code_findbugs_jsr305//jar",
         "@com_google_code_gson//jar",
         "@com_google_googleapis//google/api:api_java_proto",
+        "@com_google_googleapis//google/cloud:extended_operations_java_proto",
         "@com_google_googleapis//google/longrunning:longrunning_java_proto",
         "@com_google_guava_guava//jar",
         "@com_google_protobuf//:protobuf_java",
