feat: REGAPIC Multitransport implementation (grpc+rest)
1) Fully backward compatible with grpc-only GAPIC
2) Strictly speaking not fully backward compatible with rest-only REGAPIC (but is compatible for practical cases). See below for details.
3) Introduces the concept of default transport (is necessary to preserve backward-compabitility). The default behavior assumes grpc transport.

--- a/src/main/java/com/google/api/generator/gapic/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/BUILD.bazel
@@ -9,6 +9,7 @@ filegroup(
         "//src/main/java/com/google/api/generator/gapic/composer/comment:comment_files",
         "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue:defaultvalue_files",
         "//src/main/java/com/google/api/generator/gapic/composer/grpc:grpc_files",
+        "//src/main/java/com/google/api/generator/gapic/composer/grpcrest:grpcrest_files",
         "//src/main/java/com/google/api/generator/gapic/composer/resourcename:resourcename_files",
         "//src/main/java/com/google/api/generator/gapic/composer/rest:rest_files",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode:samplecode_files",
