--- a/src/test/java/com/google/api/generator/gapic/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/BUILD.bazel
@@ -6,6 +6,7 @@ filegroup(
         "//src/test/java/com/google/api/generator/gapic/composer:composer_files",
         "//src/test/java/com/google/api/generator/gapic/composer/defaultvalue:defaultvalue_files",
         "//src/test/java/com/google/api/generator/gapic/composer/grpc:grpc_files",
+        #        "//src/test/java/com/google/api/generator/gapic/composer/grpcrest:grpcrest_files",
         "//src/test/java/com/google/api/generator/gapic/composer/resourcename:resourcename_files",
         "//src/test/java/com/google/api/generator/gapic/composer/rest:rest_files",
         "//src/test/java/com/google/api/generator/gapic/composer/samplecode:samplecode_files",
