--- a/src/main/java/com/google/api/generator/gapic/composer/utils/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/utils/BUILD.bazel
@@ -13,7 +13,9 @@ java_library(
         ":utils_files",
     ],
     deps = [
+        "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/gapic/model",
+        "@com_google_code_findbugs_jsr305//:com_google_code_findbugs_jsr305",
         "@com_google_guava_guava//jar",
     ],
 )
