--- a/src/main/java/com/google/api/generator/gapic/protowriter/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/protowriter/BUILD.bazel
@@ -15,6 +15,7 @@ java_library(
     deps = [
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
+        "//src/main/java/com/google/api/generator/gapic/composer/utils",
         "//src/main/java/com/google/api/generator/gapic/model",
         "@com_google_googleapis//gapic/metadata:metadata_java_proto",
         "@com_google_protobuf//:protobuf_java",
