--- a/api-common-java/build.gradle
+++ b/api-common-java/build.gradle
@@ -227,6 +227,8 @@ if (project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword')
     packageGroup = "com.google.api"
     repositories {
       sonatype {   //or custom repository name
+        nexusUrl.set(uri("https://google.oss.sonatype.org/service/local/staging/deploy/maven2/"))
+        snapshotRepositoryUrl.set(uri("https://google.oss.sonatype.org/content/repositories/snapshots/"))
         username = ossrhUsername
         password = ossrhPassword
       }
