--- a/api-common-java/build.gradle
+++ b/api-common-java/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin: 'signing'
 apply plugin: 'maven-publish'
+apply plugin: 'maven'
 apply plugin: 'com.github.sherter.google-java-format'
 apply plugin: 'io.github.gradle-nexus.publish-plugin'
 
