--- a/api-common-java/.github/release-please.yml
+++ b/api-common-java/.github/release-please.yml
@@ -10,3 +10,7 @@ branches:
     handleGHRelease: true
     releaseType: java-yoshi
     branch: java7
+  - releaseType: java-backport
+    bumpMinorPreMajor: true
+    handleGHRelease: true
+    branch: 2.0.x
