chore: remove deprecated `maven` plugin (#313)
* Update ci.yaml

* Remove deprecated `maven` plugin

--- a/api-common-java/.github/workflows/ci.yaml
+++ b/api-common-java/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
     - name: Gradle Test
       run: ./gradlew test
     - name: Gradle Build
-      run: ./gradlew build install
+      run: ./gradlew build publishToMavenLocal
   format:
     runs-on: ubuntu-latest
     steps:
