--- a/gax-java/gax-grpc/build.gradle
+++ b/gax-java/gax-grpc/build.gradle
@@ -4,19 +4,21 @@ archivesBaseName = "gax-grpc"
 project.version = "2.6.1-SNAPSHOT" // {x-version-update:gax-grpc:current}
 
 dependencies {
-  implementation( project(':gax'),
-    libraries['maven.io_grpc_grpc_stub'],
-    libraries['maven.io_grpc_grpc_auth'],
-    libraries['maven.io_grpc_grpc_protobuf'],
-    libraries['maven.com_google_guava_guava'],
-    libraries['maven.com_google_code_findbugs_jsr305'],
-    libraries['maven.org_threeten_threetenbp'],
-    libraries['maven.com_google_auth_google_auth_library_oauth2_http'],
-    libraries['maven.com_google_auth_google_auth_library_credentials'],
-    libraries['maven.com_google_api_grpc_proto_google_common_protos'],
+  api(project(':gax'),
     libraries['maven.com_google_api_api_common'],
+    libraries['maven.com_google_api_grpc_proto_google_common_protos'],
+    libraries['maven.com_google_auth_google_auth_library_credentials'],
+    libraries['maven.com_google_guava_guava'],
+    libraries['maven.io_grpc_grpc_api'],
+    libraries['maven.org_threeten_threetenbp'])
+
+  implementation(libraries['maven.com_google_auth_google_auth_library_oauth2_http'],
+    libraries['maven.com_google_code_findbugs_jsr305'],
+    libraries['maven.io_grpc_grpc_alts'],
+    libraries['maven.io_grpc_grpc_auth'],
     libraries['maven.io_grpc_grpc_netty_shaded'],
-    libraries['maven.io_grpc_grpc_alts'])
+    libraries['maven.io_grpc_grpc_protobuf'],
+    libraries['maven.io_grpc_grpc_stub'])
 
   compileOnly libraries['maven.com_google_auto_value_auto_value']
 
