--- a/gax-java/gax-httpjson/build.gradle
+++ b/gax-java/gax-httpjson/build.gradle
@@ -4,23 +4,24 @@ archivesBaseName = "gax-httpjson"
 project.version = "0.91.1-SNAPSHOT" // {x-version-update:gax-httpjson:current}
 
 dependencies {
-  implementation( project(':gax'),
-    libraries['maven.com_google_protobuf'],
-    libraries['maven.com_google_protobuf_java_util'],
+  api(project(':gax'),
+    libraries['maven.com_google_api_api_common'],
+    libraries['maven.com_google_api_grpc_proto_google_common_protos'],
+    libraries['maven.com_google_auth_google_auth_library_credentials'],
     libraries['maven.com_google_code_gson_gson'],
     libraries['maven.com_google_guava_guava'],
-    libraries['maven.com_google_code_findbugs_jsr305'],
-    libraries['maven.org_threeten_threetenbp'],
     libraries['maven.com_google_http_client_google_http_client'],
+    libraries['maven.com_google_protobuf'],
+    libraries['maven.org_threeten_threetenbp'])
+
+  implementation(libraries['maven.com_google_auth_google_auth_library_oauth2_http'],
+    libraries['maven.com_google_code_findbugs_jsr305'],
     libraries['maven.com_google_http_client_google_http_client_gson'],
-    libraries['maven.com_google_auth_google_auth_library_oauth2_http'],
-    libraries['maven.com_google_auth_google_auth_library_credentials'],
-    libraries['maven.com_google_api_grpc_proto_google_common_protos'],
-    libraries['maven.com_google_api_api_common'])
+    libraries['maven.com_google_protobuf_java_util'])
 
   compileOnly libraries['maven.com_google_auto_value_auto_value']
 
-  testImplementation( project(':gax').sourceSets.test.output,
+  testImplementation(project(':gax').sourceSets.test.output,
     libraries['maven.junit_junit'],
     libraries['maven.org_mockito_mockito_core'],
     libraries['maven.com_google_truth_truth'])
