--- a/gax-java/build.gradle
+++ b/gax-java/build.gradle
@@ -13,43 +13,41 @@ plugins {
 // TODO: Populate this from dependencies.properties version property (for proper Gradle-Bazel sync)
 project.version = "2.6.1-SNAPSHOT" // {x-version-update:gax:current}
 
-ext {
-  // Project names not used for release
-  nonReleaseProjects = ['benchmark']
-  // Project names not using the default publication configuration
-  noDefaultPublications = ['benchmark', 'gax-bom']
-  libraryVendor = 'Google'
+// Project names not used for release
+def nonReleaseProjects = ['benchmark']
+// Project names not using the default publication configuration
+def noDefaultPublications = ['benchmark', 'gax-bom']
+def nonJavaProjects = ['gax-bom']
+
+ext.libraryVendor = 'Google'
+
+allprojects {
+  group = 'com.google.api'
 }
 
-if (project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword') &&
-    !nonReleaseProjects.contains(project.name)) {
-  nexusPublishing {
-    packageGroup = 'com.google.api'
-    repositories {
-      sonatype {   //or custom repository name
-        nexusUrl.set(uri('https://google.oss.sonatype.org/service/local/'))
-        snapshotRepositoryUrl.set(uri('https://google.oss.sonatype.org/content/repositories/snapshots/'))
-        username = ossrhUsername
-        password = ossrhPassword
-      }
+nexusPublishing {
+  packageGroup = 'com.google.api'
+  repositories {
+    sonatype {
+      nexusUrl = uri('https://google.oss.sonatype.org/service/local/')
+      snapshotRepositoryUrl = uri('https://google.oss.sonatype.org/content/repositories/snapshots/')
+      username = findProperty('ossrhUsername')
+      password = findProperty('ossrhPassword')
     }
   }
 }
 
-subprojects {
+def javaProjects = subprojects.findAll { !nonJavaProjects.contains(it.name) }
+configure(javaProjects) {
   apply plugin: 'java-library'
   apply plugin: 'eclipse'
   apply plugin: 'idea'
   apply plugin: 'jacoco'
-  apply plugin: 'maven-publish'
-  apply plugin: 'signing'
 
   apply plugin: 'com.dorongold.task-tree'
   apply plugin: 'com.github.johnrengelman.shadow'
   apply plugin: 'com.github.sherter.google-java-format'
   apply plugin: 'net.ltgt.apt'
-
-  group = 'com.google.api'
 
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
@@ -281,91 +279,93 @@ subprojects {
         file('.factorypath')
     }
   }
+}
 
-  // Publishing
-  // ----------
+def normalReleasableProjects = subprojects.findAll {
+  !nonReleaseProjects.contains(it.name) && !noDefaultPublications.contains(it.name)
+}
+configure(normalReleasableProjects) {
+  apply plugin: 'maven-publish'
+  apply plugin: 'signing'
 
   afterEvaluate {
-    if (!noDefaultPublications.contains(project.name)) {
-      publishing {
-        publications {
-          mavenJava(MavenPublication) {
-            version = project.version
+    publishing {
+      publications {
+        mavenJava(MavenPublication) {
+          version = project.version
 
-            from components.java
+          from components.java
 
-            artifact javadocJar
-            artifact sourcesJar
-            artifact testlibJar
+          artifact javadocJar
+          artifact sourcesJar
+          artifact testlibJar
 
-            pom {
-              name = 'GAX (Google Api eXtensions) for Java'
-              packaging = 'jar'
-              artifactId = project.name
-              description = 'Google Api eXtensions for Java'
+          pom {
+            name = 'GAX (Google Api eXtensions) for Java'
+            packaging = 'jar'
+            artifactId = project.name
+            description = 'Google Api eXtensions for Java'
+            url = 'https://github.com/googleapis/gax-java'
+
+            scm {
               url = 'https://github.com/googleapis/gax-java'
+              connection = 'scm:git:https://github.com/googleapis/gax-java.git'
+            }
 
-              scm {
+            licenses {
+              license {
+                name = 'BSD'
+                url = 'https://github.com/googleapis/gax-java/blob/master/LICENSE'
+              }
+            }
+
+            developers {
+              developer {
+                id = 'GoogleAPIs'
+                name = 'GoogleAPIs'
+                email = 'googleapis@googlegroups.com'
                 url = 'https://github.com/googleapis/gax-java'
-                connection = 'scm:git:https://github.com/googleapis/gax-java.git'
-              }
-
-              licenses {
-                license {
-                  name = 'BSD'
-                  url = 'https://github.com/googleapis/gax-java/blob/master/LICENSE'
-                }
-              }
-
-              developers {
-                developer {
-                  id = 'GoogleAPIs'
-                  name = 'GoogleAPIs'
-                  email = 'googleapis@googlegroups.com'
-                  url = 'https://github.com/googleapis/gax-java'
-                  organization = 'Google LLC'
-                  organizationUrl = 'https://www.google.com'
-                }
+                organization = 'Google LLC'
+                organizationUrl = 'https://www.google.com'
               }
             }
           }
         }
-        repositories {
-          maven {
-            url 'https://google.oss.sonatype.org/service/local/staging/deploy/maven2/'
-            credentials {
-              username = project.findProperty('ossrhUsername')
-              password = project.findProperty('ossrhPassword')
-            }
+      }
+      repositories {
+        maven {
+          url 'https://google.oss.sonatype.org/service/local/staging/deploy/maven2/'
+          credentials {
+            username = findProperty('ossrhUsername')
+            password = findProperty('ossrhPassword')
           }
         }
       }
-
-      task checkJavaLinkage(type: JavaExec) {
-        // Example invocation:
-        // ./gradlew gax-httpjson:checkJavaLinkage
-        dependsOn project.getTasksByName('publishMavenJavaPublicationToMavenLocal', true)
-        classpath = configurations.linkageChecker
-        main = 'com.google.cloud.tools.opensource.classpath.LinkageCheckerMain'
-
-        def arguments = ['-a', "com.google.api:${project.name}:${project.version}"]
-        if (project.name == 'gax-grpc') {
-          // The exclusion file can be regenerated by '-o' option. See its Wiki for details:
-          // https://github.com/GoogleCloudPlatform/cloud-opensource-java/wiki/LinkageCheckerMain#exclusion-files
-          arguments += ['--exclusion-file', 'linkage-checker-exclusion.xml']
-        }
-        args arguments
-      }
     }
 
-    signing {
-      if (!project.hasProperty('skip.signing') && !noDefaultPublications.contains(project.name)) {
-        if (project.hasProperty('signing.gnupg.executable')) {
-          useGpgCmd()
-        }
-        sign publishing.publications.mavenJava
+    task checkJavaLinkage(type: JavaExec) {
+      // Example invocation:
+      // ./gradlew gax-httpjson:checkJavaLinkage
+      dependsOn project.getTasksByName('publishMavenJavaPublicationToMavenLocal', true)
+      classpath = configurations.linkageChecker
+      main = 'com.google.cloud.tools.opensource.classpath.LinkageCheckerMain'
+
+      def arguments = ['-a', "com.google.api:${project.name}:${project.version}"]
+      if (project.name == 'gax-grpc') {
+        // The exclusion file can be regenerated by '-o' option. See its Wiki for details:
+        // https://github.com/GoogleCloudPlatform/cloud-opensource-java/wiki/LinkageCheckerMain#exclusion-files
+        arguments += ['--exclusion-file', 'linkage-checker-exclusion.xml']
       }
+      args arguments
     }
+  }
+
+  signing {
+    required { gradle.taskGraph.hasTask ":${name}:publishToSonatype" }
+    if (project.hasProperty('signing.gnupg.executable')) {
+      useGpgCmd()
+    }
+    sign publishing.publications
   }
 }
 
