--- a/gax-java/gax-grpc/build.gradle
+++ b/gax-java/gax-grpc/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     libraries['maven.io_grpc_grpc_protobuf'],
     libraries['maven.io_grpc_grpc_stub'])
 
+  runtimeOnly libraries['maven.io_grpc_grpc_xds']
+
   compileOnly libraries['maven.com_google_auto_value_auto_value']
 
   testImplementation( project(':gax').sourceSets.test.output,
